[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/eroi/eroe.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[node name="Eroe" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BaloonUI" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.684
anchor_top = 0.49
anchor_right = 0.684
anchor_bottom = 0.497
margin_left = -33.0
margin_top = -100.0
margin_right = 31.0
margin_bottom = -36.0

[node name="BaloonTexture" type="TextureRect" parent="BaloonUI"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TagsContainer" type="HBoxContainer" parent="BaloonUI"]
margin_left = 32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 32.0
alignment = 1

[connection signal="body_entered" from="." to="." method="_on_eroe_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_eroe_body_exited"]
